Notes modified, added